# everscale-inpage-provider

./: .eslintrc  .gitignore  .gitlab-ci.yml  .prettierrc  Dockerfile  README.md  hierarchy.html  index.html  markdown.config.js  package.json  rollup.config.ts  tsconfig.json  typedoc.json
assets/: hierarchy.js  highlight.css  navigation.js  search.js
classes/: Address.html  AddressLiteral.html  Contract.html  EverscaleProviderAdapter.html  FallbackProviderAdapter.html  MessageExpiredException.html  ProviderNotFoundException.html  ProviderNotInitializedException.html  ProviderRpcClient.html  SparxProviderAdapter.html  StaticProviderAdapter.html  Subscriber.html  TvmException.html  _internal_.PromiseQueue.html
docs/: .env  .eslintrc.json  .gitignore  .prettierrc.json  CNAME  README.md  index.html  index.md  package.json  tsconfig.json
functions/: _internal_.Collator.html  hasEverscaleProvider.html  hasSparxProvider.html  isAddressObject.html  isProviderAdapter.html  mergeTransactions.html  parseAccountInteraction.html  parseMessage.html  parsePartialTokensObject.html  parsePermissions.html  parseTokensObject.html  parseTransaction.html  serializeIgnoreCode.html  serializeMessage.html  serializeTokensObject.html  serializeTransaction.html
guide/: book.toml
interfaces/: ContractGetter.html  ContractMethod.html  ContractState.html  FullContractState.html  Provider.html  ProviderAdapter.html  ProviderState.html  RawProviderRequest.html  Stream.html  Subscription.html  _internal_.Collator-1.html  _internal_.Scanner.html  (+2 more)
ton-web-client/: .gitignore  Cargo.toml
ton-web-client/src/: external.rs  generic_contract.rs  lib.rs  models.rs  tokens_object.rs  utils.rs
ton-web-client/src/transport/: gql.rs  mod.rs
(+425 files in other folders)
